Fix hero image visibility and animation CSS

--- a/css/style.css
+++ b/css/style.css
@@ -1128,7 +1128,7 @@ img {
 .reveal-left.active,
 .reveal-right.active {
     opacity: 1;
-    transform: translate(0) scale(1);
+    transform: translate(0px, 0px) scale(1);
     filter: blur(0);
 }
 
